--- a/TapWinners/app/src/main/res/values/strings.xml
+++ b/TapWinners/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Tap Winner</string>
     <string name="facebook_app_id">150751892196953</string>
     <string name="scoreboardtext">SCOREBOARD</string>
+    <string name="message">message</string>
+    <string name="send">send</string>
 </resources>
