--- a/TapWinners/app/src/main/res/values/strings.xml
+++ b/TapWinners/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="scoreboardtext">SCOREBOARD</string>
     <string name="message">message</string>
     <string name="send">send</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
